<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_cyan"
    android:padding="8dip"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sjsu_logo" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_b_label"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_large"
            android:textColor="@color/light_green"
            android:paddingBottom="16dip"
            />


    </RelativeLayout>





    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >


        <TextView
            android:text="@string/textview_activityb"
            android:layout_width="@dimen/textview_activityb_width"
            android:layout_height="@dimen/textview_activityb_height"
            android:background="@color/dark_cyan"
            android:textColor="@color/black"
            android:padding="20dp"
            android:typeface="monospace"
            />



    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish_b"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_finish_b_label"
        android:layout_marginLeft="150dp"
        android:onClick="finsihActivityB"
        />


</LinearLayout>
